<?xml version="1.0"?>
<package format="3">
  <name>pub_imu_data</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="Aylon.pinto@quantillion.io">aylon</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

